--- a/src/components/PersonPage/PersonPage.module.css
+++ b/src/components/PersonPage/PersonPage.module.css
@@ -1,19 +1,34 @@
 .mainTitle {
     text-align: center;
+    border-bottom: 1px solid #000000;
+    padding-bottom: 5px;
 }
 
 .info {
     display: flex;
+    border-top: 1px solid #000000;
+    padding-top: 10px;
+}
+
+.Content{
+    display: flex;
+    padding: 5px;
 }
 
 @media screen and (min-width: 850px) {
     .info {
         flex-direction: row;
     }
+    .Content{
+        width:50%;
+    }
 }
 
 @media screen and (max-width: 850px) {
     .info {
         flex-direction: column;
+    }
+    .Content{
+        width:100%;
     }
 }
